# rust_rabbitmq

./: Cargo.toml  rabbitmq_test
src/: consumer.rs  publisher.rs
