[package]
name = "rust_rabbitmq"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "publisher"
path = "src/publisher.rs"

[[bin]]
name = "consumer"
path = "src/consumer.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.4.2"
chrono = "0.4.22"
